crates/jarl-core/src/lints/base/for_loop_dup_index/snapshots/jarl_core__lints__base__for_loop_dup_index__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/base/for_loop_dup_index/mod.rs
expression: "get_fixed_text(vec![\"for (x in 1:3) {\n    for (x in 1:4) {\n        x\n    }\n}\"],\n\"for_loop_dup_index\", None)"
---
OLD:
====
for (x in 1:3) {
    for (x in 1:4) {
        x
    }
}
NEW:
====
for (x in 1:3) {
    for (x in 1:4) {
        x
    }
}
