crates/jarl-core/src/lints/base/for_loop_dup_index/snapshots/jarl_core__lints__base__for_loop_dup_index__tests__lint_for_loop_dup_index-6.snap
---
source: crates/jarl-core/src/lints/base/for_loop_dup_index/mod.rs
expression: "snapshot_lint(\"\nfor (i in 1:3) {\n    x <- i * 2\n    for (i in 1:4) {\n        i\n    }\n}\")"
---
warning: for_loop_dup_index
 --> <test>:4:10
  |
4 |     for (i in 1:4) {
  |          -------- This index variable is already used in a parent `for` loop.
  |
  = help: Rename this index variable to avoid unexpected results.
Found 1 error.
